--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,11 +1,11 @@
 <main>
     <section class="form-section">
-        <img src="/assets/svg/logo-login.svg"/>
+        <img src="./assets/svg/logo-login.svg"/>
        <h2>{{ title }}</h2>
        <ng-content></ng-content>
        <div class="btn-wrapper">
-            <button 
-                class="btn-primary" 
+            <button
+                class="btn-primary"
                 (click)="submit()"
                 [disabled]="disablePrimaryBtn"
             >
@@ -20,6 +20,6 @@
        </div>
     </section>
     <section class="main-section">
-        <img src="/assets/svg/main-illustration.svg"/>
+        <img src="./assets/svg/main-illustration.svg"/>
     </section>
 </main>
