--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -14,7 +14,7 @@
             label="Your name"
             placeholder="John Doe"
         >
-            <img src="/assets/svg/email-icon.svg"/>
+            <img src="./assets/svg/email-icon.svg"/>
         </app-primary-input>
         <app-primary-input
             formControlName="email"
@@ -23,7 +23,7 @@
             label="Email"
             placeholder="johndoe@gmail.com"
         >
-            <img src="/assets/svg/email-icon.svg"/>
+            <img src="./assets/svg/email-icon.svg"/>
         </app-primary-input>
         <app-primary-input
             formControlName="password"
@@ -31,7 +31,7 @@
             type="password"
             label="Your Password"
         >
-        <img src="/assets/svg/password-icon.svg"/>
+        <img src="./assets/svg/password-icon.svg"/>
     </app-primary-input>
     <app-primary-input
         formControlName="passwordConfirm"
@@ -39,7 +39,7 @@
         type="password"
         label="Confirm your Password"
     >
-        <img src="/assets/svg/password-icon.svg"/>
+        <img src="./assets/svg/password-icon.svg"/>
     </app-primary-input>
     </form>
 </app-default-login-layout>
