--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <app-default-login-layout
-    title="Login into your account"
-    primaryBtnText="Login Now"
-    secondaryBtnText="Signup Now"
+    title="Acesse sua conta para continuar!"
+    primaryBtnText="Acessar Agora"
+    secondaryBtnText="Registrar Agora"
     (submit)="submit()"
     (navigate)="navigate()"
     [disablePrimaryBtn]="!loginForm.valid"
@@ -12,7 +12,7 @@
             inputName="email"
             type="email"
             label="Email"
-            placeholder="johndoe@gmail.com"
+            placeholder="emersonoliveira@gmail.com"
         >
             <img src="./assets/svg/email-icon.svg"/>
         </app-primary-input>
@@ -20,10 +20,10 @@
             formControlName="password"
             inputName="password"
             type="password"
-            label="Your Password"
+            label="Sua senha"
         >
         <img src="./assets/svg/password-icon.svg"/>
     </app-primary-input>
-    <span>Forgot password?</span>
+    <span>Esqueceu a senha?</span>
     </form>
 </app-default-login-layout>
