Ajustes de keypress - login e signup

--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -6,7 +6,7 @@
     (submit)="submit()"
     [disablePrimaryBtn]="!signupForm.valid"
 >
-    <form [formGroup]="signupForm">
+    <form [formGroup]="signupForm" (keydown.enter)="submit()">
         <app-primary-input
             formControlName="name"
             inputName="name"
