--- a/src/app/pages/demands/demands-page.component.html
+++ b/src/app/pages/demands/demands-page.component.html
@@ -8,14 +8,14 @@
   <main class="main-content">
     <section class="demands-list">
       <h2>Minhas Demandas</h2>
-<!--      <div class="search-bar">-->
-<!--        <input-->
-<!--          type="text"-->
-<!--          placeholder="Pesquisar demandas..."-->
-<!--          [(ngModel)]="searchTerm"-->
-<!--          (input)="filterDemands()"-->
-<!--        />-->
-<!--      </div>-->
+      <div class="search-bar">
+        <input
+          type="text"
+          placeholder="Pesquisar demandas..."
+          [(ngModel)]="searchTerm"
+          (input)="filterDemands()"
+        />
+      </div>
       <div *ngIf="loading" class="loading">
         <span class="loader"></span>
         <p>Carregando demandas...</p>
