Atualiza cores e logos para a nova identidade visual; adiciona estatísticas no painel de gerenciamento

--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,6 +1,8 @@
 <main>
     <section class="form-section">
-        <img src="./assets/svg/logo-login.svg"/>
+        <div class="logo-container">
+            <img src="./assets/svg/logo-login.svg" alt="CronoMetre Logo"/>
+        </div>
        <h2>{{ title }}</h2>
        <ng-content></ng-content>
        <div class="btn-wrapper">
