--- a/src/app/pages/demands/demands-page.component.html
+++ b/src/app/pages/demands/demands-page.component.html
@@ -1,7 +1,7 @@
 <div class="demands-container">
   <aside class="sidebar">
     <div class="logo">
-      <img src="./assets/svg/logo.svg" alt="Logo Sicoob" />
+      <img src="./assets/svg/logo.svg" alt="Logo CronoMetre" />
     </div>
     <button class="new-demand-btn">+ Nova Demanda</button>
   </aside>
