--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #75C044;
-$text-color: #003C44;
-$secondary-color: #005E6B;
-$gray-bg: #072C30;
+$primary-color: #0057B7;
+$text-color: #000000;
+$secondary-color: #003A7A;
+$gray-bg: #F5F5F5;
 $gray-secondary-bg: #F1F3F6;
