--- a/src/app/pages/demands/demands-page.component.scss
+++ b/src/app/pages/demands/demands-page.component.scss
@@ -392,31 +392,43 @@ input, textarea, select {
       .form-group {
         flex: 1;
         position: relative;
+        margin-bottom: 0;
 
         .datetime-input {
-          position: relative;
-          z-index: 1;
-          padding-right: 30px;
           width: 100%;
           padding: 12px;
           border: 1px solid #E5E7EB;
           border-radius: 8px;
-          background: rgba(255,255,255,0.1);
+          background: #FFFFFF;
           color: #000;
           font-size: 14px;
+          cursor: pointer;
+          box-sizing: border-box;
+          position: relative;
 
           &::-webkit-calendar-picker-indicator {
             position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
+            right: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
             cursor: pointer;
-            filter: invert(1);
             z-index: 2;
+          }
+
+          &::-webkit-inner-spin-button,
+          &::-webkit-outer-spin-button {
+            display: none;
           }
 
           &:focus {
             outline: none;
+            border-color: #0057B7;
+            box-shadow: 0 0 0 2px rgba(0, 87, 183, 0.1);
+          }
+
+          &:hover {
             border-color: #0057B7;
           }
         }
@@ -424,7 +436,7 @@ input, textarea, select {
         &:last-child {
           .datetime-input::-webkit-calendar-picker-indicator {
             transform-origin: right center;
-            transform: scale(0.8) translateY(-50%);
+            transform: translateY(-50%);
           }
         }
       }
